--- a/css/main.css
+++ b/css/main.css
@@ -1,10 +1,15 @@
 .overlayClass {
     z-index: 1001;
     position: absolute;
-    top: 829px;
+    /*top: 978px;*/
+    bottom: 1px;
     left: 0;
     background-color: white;
-    width: 1155px;
+    width: 1360px;
     height: 26px;
     float: right;
+}
+
+.margin-top-50{
+      margin-top: 50px;
 }
